--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
             if (op==='/'){
                 if (n2===0){
                     res.innerHTML = `nao é possivel dividir por zero`
+                    return
                 }else{
                     var resultado = n1 / n2
                 }
