adicionando interatividade com teclado numerico

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>calculadora simples</h1>
     <div id="areanumeros">
-        <input type="number" id="tn1">
+        <input type="text" id="tn1">
     </div>
     <div id="areabotao">
         <input type="button" value="7" id="7" class="botoesc numeros" >
@@ -27,13 +27,14 @@
         <input type="button" value="1" id="1" class="botoesc numeros" >
         <input type="button" value="2" id="2" class="botoesc numeros" >
         <input type="button" value="3" id="3" class="botoesc numeros" >
-        <input type="button" value="X" id="mutiplicar" class="botoesc">
+        <input type="button" value="*" id="mutiplicar" class="botoesc">
 
 
-        <input type="button" value="/" id="dividir" onclick="salvarnumero('/')" class="botoesc">
+        <input type="button" value="/" id="dividir" class="botoesc">
 
         <input type="button" value="0" id="0" class="botoesc numeros" >
 
+        <input type="button" value="." id="ponto" class="botoesc numeros" >
         <input type="button" value="C" id="limpar" class="botoesc">
         <input type="button" value="<=" id="apagar" class="botoesc">
         <input type="button" value="=" id="calcular" class="botoesc">
