--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
         <input type="button" value="." id="ponto" class="botoesc numeros" >
         <input type="button" value="C" id="limpar" class="botoesc">
+        <input type="button" value="CE" id="limpar_atual" class="botoesc">
         <input type="button" value="<=" id="apagar" class="botoesc">
         <input type="button" value="=" id="calcular" class="botoesc">
         
